Update index page with modern design, service cards, commitment and testimonials sections

--- a/index.html
+++ b/index.html
@@ -82,74 +82,64 @@
         <div class="row g-4">
           <!-- Accounting -->
           <div class="col-md-4">
-            <div class="card h-100 text-center border-0">
-              <div class="card-body">
-        <div class="icon-circle mb-3"><span class="icon-letter">A</span></div>
-                <h5 class="card-title">Accounting</h5>
-                <p class="card-text">
-                  Compilation of annual financial statements, working papers and
-                  monthly accounting services including payroll and VAT.
-                </p>
-                <a href="services.html#accounting" class="link-primary">Learn more</a>
-              </div>
+            <div class="service-card h-100">
+              <img src="accounting.png" alt="Accounting" class="service-icon" />
+              <h5 class="fw-bold mb-2">Accounting</h5>
+              <p class="card-text mb-3">
+                Compilation of annual financial statements, working papers and
+                monthly accounting services including payroll and VAT.
+              </p>
+              <a href="services.html#accounting" class="link-primary">Learn more</a>
             </div>
           </div>
           <!-- Tax -->
           <div class="col-md-4">
-            <div class="card h-100 text-center border-0">
-              <div class="card-body">
-                <div class="icon-circle mb-3"><span class="icon-letter">T</span></div>
-                <h5 class="card-title">Tax</h5>
-                <p class="card-text">
-                  Applications for compliance and directives, calculation and
-                  submission of tax returns, payroll reconciliations and tax
-                  planning.
-                </p>
-                <a href="services.html#tax" class="link-primary">Learn more</a>
-              </div>
+            <div class="service-card h-100">
+              <img src="tax.png" alt="Tax" class="service-icon" />
+              <h5 class="fw-bold mb-2">Tax</h5>
+              <p class="card-text mb-3">
+                Applications for compliance and directives, calculation and
+                submission of tax returns, payroll reconciliations and tax
+                planning.
+              </p>
+              <a href="services.html#tax" class="link-primary">Learn more</a>
             </div>
           </div>
           <!-- Secretarial -->
           <div class="col-md-4">
-            <div class="card h-100 text-center border-0">
-              <div class="card-body">
-                <div class="icon-circle mb-3"><span class="icon-letter">S</span></div>
-                <h5 class="card-title">Secretarial</h5>
-                <p class="card-text">
-                  Company secretarial services, CIPC registrations and
-                  lodgements, compliance with the Companies Act and trust
-                  administration.
-                </p>
-                <a href="services.html#secretarial" class="link-primary">Learn more</a>
-              </div>
+            <div class="service-card h-100">
+              <img src="secretarial.png" alt="Secretarial" class="service-icon" />
+              <h5 class="fw-bold mb-2">Secretarial</h5>
+              <p class="card-text mb-3">
+                Company secretarial services, CIPC registrations and
+                lodgements, compliance with the Companies Act and trust
+                administration.
+              </p>
+              <a href="services.html#secretarial" class="link-primary">Learn more</a>
             </div>
           </div>
           <!-- Estates -->
           <div class="col-md-4">
-            <div class="card h-100 text-center border-0">
-              <div class="card-body">
-                <div class="icon-circle mb-3"><span class="icon-letter">E</span></div>
-                <h5 class="card-title">Estates</h5>
-                <p class="card-text">
-                  Estate planning, modern wills with discretionary trusts and
-                  complete estate administration services.
-                </p>
-                <a href="services.html#estates" class="link-primary">Learn more</a>
-              </div>
+            <div class="service-card h-100">
+              <img src="estates.png" alt="Estates" class="service-icon" />
+              <h5 class="fw-bold mb-2">Estates</h5>
+              <p class="card-text mb-3">
+                Estate planning, modern wills with discretionary trusts and
+                complete estate administration services.
+              </p>
+              <a href="services.html#estates" class="link-primary">Learn more</a>
             </div>
           </div>
           <!-- Advisory -->
           <div class="col-md-4">
-            <div class="card h-100 text-center border-0">
-              <div class="card-body">
-                <div class="icon-circle mb-3"><span class="icon-letter">Ad</span></div>
-                <h5 class="card-title">Advisory</h5>
-                <p class="card-text">
-                  Business structuring, valuations, guidance on mergers and
-                  acquisitions and cash flow projections.
-                </p>
-                <a href="services.html#advisory" class="link-primary">Learn more</a>
-              </div>
+            <div class="service-card h-100">
+              <img src="advisory.png" alt="Advisory" class="service-icon" />
+              <h5 class="fw-bold mb-2">Advisory</h5>
+              <p class="card-text mb-3">
+                Business structuring, valuations, guidance on mergers and
+                acquisitions and cash flow projections.
+              </p>
+              <a href="services.html#advisory" class="link-primary">Learn more</a>
             </div>
           </div>
         </div>
@@ -162,9 +152,9 @@
         <div class="row align-items-center">
           <div class="col-md-6">
             <img
-              src="assets/about.png"
+              src="about.png"
               alt="About RITH"
-              class="img-fluid rounded shadow-sm"
+              class="img-fluid rounded shadow-sm about-preview-img"
             />
           </div>
           <div class="col-md-6 mt-4 mt-md-0">
@@ -183,6 +173,79 @@
               underpin everything we do.
             </p>
             <a href="about.html" class="btn btn-outline-primary">Get to know us</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Commitment section -->
+    <section id="commitment" class="py-5">
+      <div class="container">
+        <div class="text-center mb-5">
+          <h2 class="fw-bold">Our Commitment</h2>
+          <p class="text-muted">Partnering with you every step of the way.</p>
+        </div>
+        <div class="row g-4">
+          <div class="col-md-4">
+            <div class="card h-100 text-center border-0 shadow-sm">
+              <div class="card-body">
+                <h5 class="card-title fw-bold mb-2">Personalized Service</h5>
+                <p class="card-text">
+                  Every client receives our full attention and bespoke solutions tailored to their needs.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card h-100 text-center border-0 shadow-sm">
+              <div class="card-body">
+                <h5 class="card-title fw-bold mb-2">Trusted Expertise</h5>
+                <p class="card-text">
+                  Our qualified professionals bring decades of experience and industry knowledge to your business.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card h-100 text-center border-0 shadow-sm">
+              <div class="card-body">
+                <h5 class="card-title fw-bold mb-2">Forward-Thinking</h5>
+                <p class="card-text">
+                  We stay ahead of regulatory changes and emerging trends so you can focus on the future.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Testimonials section -->
+    <section id="testimonials" class="py-5 bg-light">
+      <div class="container">
+        <div class="text-center mb-5">
+          <h2 class="fw-bold">Testimonials</h2>
+        </div>
+        <div class="row g-4">
+          <div class="col-md-6">
+            <div class="card border-0 shadow-sm h-100">
+              <div class="card-body">
+                <p class="mb-3">
+                  “RITH’s guidance helped my business soar. Their team is extremely professional and attentive.”
+                </p>
+                <p class="text-muted mb-0">— A satisfied client</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="card border-0 shadow-sm h-100">
+              <div class="card-body">
+                <p class="mb-3">
+                  “From day one, RITH took the time to understand my goals. I can now focus on growth with confidence.”
+                </p>
+                <p class="text-muted mb-0">— Entrepreneur</p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
