Update about, contact and team pages with modern design and new overlay

--- a/team.html
+++ b/team.html
@@ -48,7 +48,7 @@
     </nav>
 
     <!-- Page header -->
-    <section class="page-header d-flex align-items-center text-white" style="background: url('assets/hero.png') no-repeat center center/cover; min-height: 40vh;">
+    <section class="page-header d-flex align-items-center text-white" style="background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('hero2.png') no-repeat center center/cover; min-height: 40vh;">
       <div class="container text-center mt-5">
         <h1 class="display-5 fw-bold">Our Team</h1>
         <p class="lead">Meet our dedicated professionals who deliver smart solutions to support you optimally.</p>
