--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
     </nav>
 
     <!-- Page header -->
-    <section class="page-header d-flex align-items-center text-white" style="background: url('assets/about.png') no-repeat center center/cover; min-height: 40vh;">
+    <section class="page-header d-flex align-items-center text-white" style="background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('about.png') no-repeat center center/cover; min-height: 40vh;">
       <div class="container text-center mt-5">
         <h1 class="display-5 fw-bold">About Us</h1>
       </div>
